--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
   </div>
   <header class='item-header'>
     <h3 class='item-title'>
-      <a href='/post/where-does-this-go/'>Where does this go?</a>
+      <a href='/blog/kramer/'>People Are Naming Their Children After Creed Bratton</a>
     </h3>
   </header>
 </li>
@@ -179,7 +179,7 @@
   </div>
   <header class='item-header'>
     <h3 class='item-title'>
-      <a href='/blog/will-the-serve-site-work/'>Will the Serve Site Work</a>
+      <a href='/post/where-does-this-go/'>Where does this go?</a>
     </h3>
   </header>
 </li>
