--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -96,7 +96,7 @@
       </li><li class='item current'>
         <a aria-current='page' href='/cv/'>CV</a>
       </li><li class='item'>
-        <a href='https://github.com/MunifTanjim/minimo'>Repo</a>
+        <a href='https://github.com/danbaggett'>Github</a>
       </li></ul>
   </div>
 </nav><div class='header-widgets'>
@@ -112,7 +112,7 @@
 
       <header id='header' class='header site-header'>
         <div class='container sep-after'>
-          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'>Is the</p>
+          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'> </p>
           </div>
         </div>
       </header>
