--- a/public/search/index.html
+++ b/public/search/index.html
@@ -84,7 +84,7 @@
       </li><li class='item'>
         <a href='/cv/'>CV</a>
       </li><li class='item'>
-        <a href='https://github.com/MunifTanjim/minimo'>Repo</a>
+        <a href='https://github.com/danbaggett'>Github</a>
       </li></ul>
   </div>
 </nav><div class='header-widgets'>
@@ -100,7 +100,7 @@
 
       <header id='header' class='header site-header'>
         <div class='container sep-after'>
-          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'>Is the</p>
+          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'> </p>
           </div>
         </div>
       </header>
