--- a/public/test_post/index.html
+++ b/public/test_post/index.html
@@ -104,7 +104,7 @@ No one named their child Daenerys before show’s debut in 2011. It’s safe to 
       </li><li class='item'>
         <a href='/cv/'>CV</a>
       </li><li class='item'>
-        <a href='https://github.com/MunifTanjim/minimo'>Repo</a>
+        <a href='https://github.com/danbaggett'>Github</a>
       </li></ul>
   </div>
 </nav><div class='header-widgets'>
@@ -119,7 +119,7 @@ No one named their child Daenerys before show’s debut in 2011. It’s safe to 
 
       <header id='header' class='header site-header'>
         <div class='container sep-after'>
-          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'>Is the</p>
+          <div class='header-info'><p class='site-title title'> </p><p class='desc site-desc'> </p>
           </div>
         </div>
       </header>
