--- a/public/test_post/index.html
+++ b/public/test_post/index.html
@@ -100,11 +100,11 @@ No one named their child Daenerys before show’s debut in 2011. It’s safe to 
       </li><li class='item'>
         <a href='/blog/'>Blog</a>
       </li><li class='item'>
-        <a href='/typography/'>Other</a>
+        <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
         <a href='/cv/'>CV</a>
       </li><li class='item'>
-        <a href='https://github.com/danbaggett'>Github</a>
+        <a href='/contact/'>Contact</a>
       </li></ul>
   </div>
 </nav><div class='header-widgets'>
