--- a/public/404.html
+++ b/public/404.html
@@ -92,11 +92,11 @@
       </li><li class='item'>
         <a href='/blog/'>Blog</a>
       </li><li class='item'>
-        <a href='/typography/'>Other</a>
+        <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
         <a href='/cv/'>CV</a>
       </li><li class='item'>
-        <a href='https://github.com/danbaggett'>Github</a>
+        <a href='/contact/'>Contact</a>
       </li></ul>
   </div>
 </nav><div class='header-widgets'>
