Fixed How Blog Posts Work

--- a/public/test_post/index.html
+++ b/public/test_post/index.html
@@ -98,7 +98,7 @@ No one named their child Daenerys before show’s debut in 2011. It’s safe to 
     <ul><li class='item'>
         <a href='/'>Home</a>
       </li><li class='item'>
-        <a href='/blog/'>Blog</a>
+        <a href='/post/'>Blog</a>
       </li><li class='item'>
         <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
