Changed Website Some

--- a/public/index.html
+++ b/public/index.html
@@ -89,14 +89,12 @@
 </svg>
 </span>
 </button>
-    <ul><li class='item current'>
-        <a aria-current='page' href='/'>Home</a>
-      </li><li class='item'>
+    <ul><li class='item'>
         <a href='/post/'>Blog</a>
       </li><li class='item'>
         <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
-        <a href='/cv/'>CV</a>
+        <a href='https://drive.google.com/file/d/1CEpI9zJJUF6UzgEA32K_ORHVJ0bA41Af/view?usp=sharing'>CV</a>
       </li><li class='item'>
         <a href='/contact/'>Contact</a>
       </li></ul>
@@ -120,16 +118,6 @@
       <main id='content'>
 
 
-
-<div class='entry'>
-  
-  <div class='container entry-content'>
-  <p>git_even - content - index.md
-I can put markdown content here, images, whatever.</p>
-
-</div>
-
-</div>
 <div class='home-widgets'>
   <div class='container sep-before'><section class='widget widget-recent_posts sep-after'>
   <header>
