--- a/public/404.html
+++ b/public/404.html
@@ -88,13 +88,11 @@
 </span>
 </button>
     <ul><li class='item'>
-        <a href='/'>Home</a>
-      </li><li class='item'>
         <a href='/post/'>Blog</a>
       </li><li class='item'>
         <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
-        <a href='/cv/'>CV</a>
+        <a href='https://drive.google.com/file/d/1CEpI9zJJUF6UzgEA32K_ORHVJ0bA41Af/view?usp=sharing'>CV</a>
       </li><li class='item'>
         <a href='/contact/'>Contact</a>
       </li></ul>
