--- a/public/test_post/index.html
+++ b/public/test_post/index.html
@@ -96,13 +96,11 @@ No one named their child Daenerys before show’s debut in 2011. It’s safe to 
 </span>
 </button>
     <ul><li class='item'>
-        <a href='/'>Home</a>
-      </li><li class='item'>
         <a href='/post/'>Blog</a>
       </li><li class='item'>
         <a href='https://github.com/danbaggett'>Github</a>
       </li><li class='item'>
-        <a href='/cv/'>CV</a>
+        <a href='https://drive.google.com/file/d/1CEpI9zJJUF6UzgEA32K_ORHVJ0bA41Af/view?usp=sharing'>CV</a>
       </li><li class='item'>
         <a href='/contact/'>Contact</a>
       </li></ul>
