Changed Contact Info

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -2,11 +2,11 @@
 <html lang='en'><head>
   <meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<meta name='description' content='Description field spits out here.'>
+<meta name='description' content='dbaggett@irsc.edu'>
 <meta name='theme-color' content='#00ffd5'>
 
 <meta property='og:title' content='Contact •  '>
-<meta property='og:description' content='Description field spits out here.'>
+<meta property='og:description' content='dbaggett@irsc.edu'>
 <meta property='og:url' content='/contact/'>
 <meta property='og:site_name' content=' '>
 <meta property='og:type' content='article'><meta property='article:section' content='page'><meta name='twitter:card' content='summary'>
@@ -124,7 +124,7 @@
     <div class='header-info'>
       <h1 class='title'>Contact</h1>
       
-<p class='desc'>Description field spits out here.</p>
+<p class='desc'>dbaggett@irsc.edu</p>
 
 
     </div>
@@ -137,8 +137,7 @@
   
 
   <div class='container entry-content'>
-  <p>Here I should probably just put an outside link to contact me?</p>
-
+  
 </div>
 
   
